Created constants for keys used in __gCrWeb.getElementFromPoint.

Bug: 736480
Change-Id: Ia26ce365ebe41af525e74a805da1b139eb43dc85