ios/web/web_state/context_menu_params_utils.mm
@@ -7,17 +7,19 @@
 #include "base/strings/sys_string_conversions.h"
 #include "components/url_formatter/url_formatter.h"
 #include "ios/web/public/referrer_util.h"
+#import "ios/web/web_state/context_menu_constants.h"
 
 #if !defined(__has_feature) || !__has_feature(objc_arc)
 #error "This file requires ARC support."
 #endif
 
 namespace web {
+
 ContextMenuParams ContextMenuParamsFromElementDictionary(
     NSDictionary* element) {
   ContextMenuParams params;
   NSString* title = nil;
-  NSString* href = element[@"href"];
+  NSString* href = element[kContextMenuElementHyperlink];
   if (href) {
     params.link_url = GURL(base::SysNSStringToUTF8(href));
     if (params.link_url.SchemeIs(url::kJavaScriptScheme)) {
@@ -27,7 +29,7 @@ ContextMenuParams ContextMenuParamsFromElementDictionary(
       title = base::SysUTF16ToNSString(URLText);
     }
   }
-  NSString* src = element[@"src"];
+  NSString* src = element[kContextMenuElementSource];
   if (src) {
     params.src_url = GURL(base::SysNSStringToUTF8(src));
     if (!title)
@@ -35,18 +37,18 @@ ContextMenuParams ContextMenuParamsFromElementDictionary(
     if ([title hasPrefix:base::SysUTF8ToNSString(url::kDataScheme)])
       title = nil;
   }
-  NSString* titleAttribute = element[@"title"];
+  NSString* titleAttribute = element[kContextMenuElementTitle];
   if (titleAttribute)
     title = titleAttribute;
   if (title) {
     params.menu_title.reset([title copy]);
   }
-  NSString* referrerPolicy = element[@"referrerPolicy"];
+  NSString* referrerPolicy = element[kContextMenuElementReferrerPolicy];
   if (referrerPolicy) {
     params.referrer_policy =
         web::ReferrerPolicyFromString(base::SysNSStringToUTF8(referrerPolicy));
   }
-  NSString* innerText = element[@"innerText"];
+  NSString* innerText = element[kContextMenuElementInnerText];
   if ([innerText length] > 0) {
     params.link_text.reset([innerText copy]);
   }
