ios/web/web_state/js/context_menu_js_unittest.mm
@@ -14,6 +14,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #import "ios/web/public/web_state/ui/crw_web_view_proxy.h"
 #import "ios/web/public/web_state/ui/crw_web_view_scroll_view_proxy.h"
 #import "ios/web/public/web_state/web_state.h"
+#import "ios/web/web_state/context_menu_constants.h"
 #include "testing/gtest/include/gtest/gtest.h"
 #include "testing/gtest_mac.h"
 
@@ -92,8 +93,8 @@ TEST_F(ContextMenuJsTest, GetImageUrlAtPoint) {
   NSString* html =
       @"<img id='foo' style='width:200;height:200;' src='file:///bogus'/>";
   NSDictionary* expected_value = @{
-    @"src" : @"file:///bogus",
-    @"referrerPolicy" : @"default",
+    kContextMenuElementSource : @"file:///bogus",
+    kContextMenuElementReferrerPolicy : @"default",
   };
   ImageTesterHelper(html, expected_value);
 }
@@ -103,9 +104,9 @@ TEST_F(ContextMenuJsTest, GetImageTitleAtPoint) {
   NSString* html = @"<img id='foo' title='Hello world!'"
                     "style='width:200;height:200;' src='file:///bogus'/>";
   NSDictionary* expected_value = @{
-    @"src" : @"file:///bogus",
-    @"referrerPolicy" : @"default",
-    @"title" : @"Hello world!",
+    kContextMenuElementSource : @"file:///bogus",
+    kContextMenuElementReferrerPolicy : @"default",
+    kContextMenuElementTitle : @"Hello world!",
   };
   ImageTesterHelper(html, expected_value);
 }
@@ -117,9 +118,9 @@ TEST_F(ContextMenuJsTest, GetLinkImageUrlAtPoint) {
        "<img id='foo' style='width:200;height:200;' src='file:///bogus'/>"
        "</a>";
   NSDictionary* expected_value = @{
-    @"src" : @"file:///bogus",
-    @"referrerPolicy" : @"default",
-    @"href" : @"file:///linky",
+    kContextMenuElementSource : @"file:///bogus",
+    kContextMenuElementReferrerPolicy : @"default",
+    kContextMenuElementHyperlink : @"file:///linky",
   };
   ImageTesterHelper(html, expected_value);
 }
@@ -137,8 +138,8 @@ TEST_F(ContextMenuJsTest, TextAreaStopsProximity) {
        "</div></body> </html>";
 
   NSDictionary* success = @{
-    @"src" : @"file:///bogus",
-    @"referrerPolicy" : @"default",
+    kContextMenuElementSource : @"file:///bogus",
+    kContextMenuElementReferrerPolicy : @"default",
   };
   NSDictionary* failure = @{};
 
@@ -165,9 +166,10 @@ TEST_F(ContextMenuJsTest, LinkOfImage) {
   LoadHtml(base::StringPrintf(image, "http://destination"));
   id result = ExecuteGetElementFromPointJavaScript(20, 20);
   NSDictionary* expected_result = @{
-    @"src" : [NSString stringWithFormat:@"%sfoo", BaseUrl().c_str()],
-    @"referrerPolicy" : @"default",
-    @"href" : @"http://destination/",
+    kContextMenuElementSource :
+        [NSString stringWithFormat:@"%sfoo", BaseUrl().c_str()],
+    kContextMenuElementReferrerPolicy : @"default",
+    kContextMenuElementHyperlink : @"http://destination/",
   };
   EXPECT_NSEQ(expected_result, result);
 
@@ -175,9 +177,10 @@ TEST_F(ContextMenuJsTest, LinkOfImage) {
   LoadHtml(base::StringPrintf(image, "javascript:console.log('whatever')"));
   result = ExecuteGetElementFromPointJavaScript(20, 20);
   expected_result = @{
-    @"src" : [NSString stringWithFormat:@"%sfoo", BaseUrl().c_str()],
-    @"referrerPolicy" : @"default",
-    @"href" : @"javascript:console.log(",
+    kContextMenuElementSource :
+        [NSString stringWithFormat:@"%sfoo", BaseUrl().c_str()],
+    kContextMenuElementReferrerPolicy : @"default",
+    kContextMenuElementHyperlink : @"javascript:console.log(",
   };
   EXPECT_NSEQ(expected_result, result);
 
@@ -193,8 +196,9 @@ TEST_F(ContextMenuJsTest, LinkOfImage) {
     LoadHtml(base::StringPrintf(image, javascript.c_str()));
     result = ExecuteGetElementFromPointJavaScript(20, 20);
     expected_result = @{
-      @"src" : [NSString stringWithFormat:@"%sfoo", BaseUrl().c_str()],
-      @"referrerPolicy" : @"default",
+      kContextMenuElementSource :
+          [NSString stringWithFormat:@"%sfoo", BaseUrl().c_str()],
+      kContextMenuElementReferrerPolicy : @"default",
     };
     // Make sure the returned JSON does not have an 'href' key.
     EXPECT_NSEQ(expected_result, result);
